--- a/package.json
+++ b/package.json
@@ -6,16 +6,27 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install",
+    "tsc-check": "vue-tsc",
+    "lint": "eslint --ext .ts,.js,.vue .",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "vue": "^3.3.4",
     "vuetify": "^3.3.15"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.15",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-vue": "^9.10.0",
+    "husky": "^8.0.0",
     "postcss": "^8.4.29",
+    "prettier": "3.0.3",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
