--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vuetify": "^3.3.15"
